@@ -90,7 +90,7 @@ if test -n "$HIGHLIGHT"; then
 else
   AC_PATH_PROG([HIGHLIGHT], [highlight])
   if test -n "$HIGHLIGHT"; then
-    HIGHLIGHT_OPTIONS="-X -f"
+    HIGHLIGHT_OPTIONS="-X -f -Ggtkdoc "
   fi
 fi
 AC_SUBST([HIGHLIGHT_OPTIONS])
