@@ -1,5 +1,11 @@
 2009-02-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* configure.in:
+	* gtkdoc-fixxref.in:
+	  Fix params and running of 'highlight'.
+
+2009-02-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-mkdb.in:
 	  Require the line to ends after the double-colon (sans whitespace),
 
